--- a/Lab21/Web.config
+++ b/Lab21/Web.config
@@ -81,5 +81,6 @@
   <connectionStrings>
     <add name="CoffeeShopDBEntities" connectionString="metadata=res://*/Models.CoffeeShopDBModel.csdl|res://*/Models.CoffeeShopDBModel.ssdl|res://*/Models.CoffeeShopDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3O91U1G\SQLEXPRESS;initial catalog=CoffeeShopDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="CoffeeShopDBEntities1" connectionString="metadata=res://*/Models.CoffeeShopDBModel.csdl|res://*/Models.CoffeeShopDBModel.ssdl|res://*/Models.CoffeeShopDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3O91U1G\SQLEXPRESS;initial catalog=CoffeeShopDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CoffeeShopDBEntities2" connectionString="metadata=res://*/Models.ItemsModel.csdl|res://*/Models.ItemsModel.ssdl|res://*/Models.ItemsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3O91U1G\SQLEXPRESS;initial catalog=CoffeeShopDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
